# nlp-research-assistant

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: api.py
experiments/: fine-tuned-model.dvc  fine_tuning.py  visualize.py
experiments/fine-tuned-model/: README.md  config_sentence_transformers.json
frontend/: .env  Dockerfile  nginx.conf
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/navbar/: Navbar.tsx
frontend/src/pages/: Chat.tsx  Home.tsx  Search.tsx  Visualisations.tsx
preprocess/: preprocess_pdf.py
serving/: qa_model.py  semantic_search.py
