[tool.poetry]
name = "nlp-research-assistant"
version = "0.1.0"
description = ""
authors = ["anton-cornak"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.114.2"
sentence-transformers = "^3.1.0"
langchain = "^0.3.0"
langchain-chroma = "^0.1.4"
langchain-community = "^0.3.0"
chromadb = ">=0.4.0,<0.5.4"
unstructured = { extras = ["pdf"], version = "^0.15.12" }
langchain-huggingface = "^0.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
seaborn = "^0.13.2"
umap-learn = "^0.5.6"
wordcloud = "^1.9.3"
nltk = "^3.9.1"
torch = "^2.4.1"
datasets = "^3.0.0"
transformers = { extras = ["torch"], version = "^4.44.2" }

[tool.isort]
profile = "black"

[tool.poetry.plugins.dotenv]
ignore = "false"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
